--- a/ego-front-web/pom.xml
+++ b/ego-front-web/pom.xml
@@ -19,8 +19,14 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>1.5.10.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.0.0.RELEASE</version>
+            <version>1.5.10.RELEASE</version>
         </dependency>
         <!--mysql-->
         <dependency>
@@ -38,7 +44,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.0.0.RELEASE</version>
+            <version>1.5.10.RELEASE</version>
         </dependency>
         <!--freemarker-->
         <dependency>
