--- a/ego-front-web/src/main/resources/application.yml
+++ b/ego-front-web/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     druid:
-      url: jdbc:mysql://db_server:3306/db_cms?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+      url: jdbc:mysql://db_server:3306/ego?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
       username: root
       password: "$%^YGR^&UHGT^&U"
       driver-class-name: com.mysql.cj.jdbc.Driver
